<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CropFragments.RiceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="center"
        android:paddingStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/good_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/ic_watering" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/good"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:gravity="top|start"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/watering" />

                <TextView
                    android:id="@+id/water_crops"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/sample_crops"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/normal_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/ic_fertilizer" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/normal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:gravity="top|start"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/fertilizers" />

                <TextView
                    android:id="@+id/fertilizer_crops"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/sample_crops1"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bad_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/ic_pesticide" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/bad"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:gravity="center|start"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/pesticides" />

                <TextView
                    android:id="@+id/pesticide_crops"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/sample_crops2"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>