<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WeatherFragments.TomorrowFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/status"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_sunny"/>
            <TextView
                android:id="@+id/w_statement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/sample_weather_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        app:srcCompat="@drawable/ic_temperature" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="15dp">

                        <TextView
                            android:id="@+id/temp_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:text="35°C" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:text="@string/temperature"
                            android:textAllCaps="true"
                            android:textColor="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grid_border"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        app:srcCompat="@drawable/ic_rain" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="15dp">

                        <TextView
                            android:id="@+id/rain_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:text="5mm" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:text="@string/rainfall"
                            android:textAllCaps="true"
                            android:textColor="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grid_border"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/good_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        app:srcCompat="@drawable/ic_good" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/good"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/good_condition" />

                        <TextView
                            android:id="@+id/good_crops"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:text="@string/sample_crops"
                            android:textColor="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/normal_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        app:srcCompat="@drawable/ic_normal" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/normal"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/normal_condition" />

                        <TextView
                            android:id="@+id/normal_crops"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:text="@string/sample_crops1"
                            android:textColor="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/bad_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        app:srcCompat="@drawable/ic_bad" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bad"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/bad_condition" />

                        <TextView
                            android:id="@+id/bad_crops"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:text="@string/sample_crops2"
                            android:textColor="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>