<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".Advisory">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:src="@drawable/ic_back"
            android:elevation="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <LinearLayout
            android:id="@+id/head_green_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/green_grad"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:text="@string/advisory_title"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="25sp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/dateNtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:text="@string/sample_date"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/white"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:transitionName="slide_up_cloud"
                android:scaleType="fitXY"
                android:src="@drawable/cloud_head"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="180dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/Advisory_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/ic_good" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="10dp">

                    <TextView
                        android:id="@+id/Advisory_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/good_condition" />
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crop_tabs"
                android:minHeight="?attr/actionBarSize"
                app:tabTextColor="@color/tab_text"
                app:tabIndicatorColor="@color/grad_end"
                app:tabIndicator="@drawable/tab_indicator"
                app:tabIndicatorFullWidth="false"
                app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"/>
            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingTop="20dp"
                android:id="@+id/crop_pager">
            </androidx.viewpager.widget.ViewPager>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>